elastic-apm/components/fleet-apm-integration.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm
spec:
  selector:
    agent.k8s.elastic.co/name: elastic-agent
  ports:
    - protocol: TCP
      port: 8200
