elastic-apm/components/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "kibana.example.com" # replace with your domain
      secretName: kibana-tls-crt
  rules:
    - host: "kibana.example.com" # replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "kibana-kb-http"
                port:
                  number: 5601
